--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "next": "14.0.3",
+    "payload": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
