--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "next": "14.0.3",
+    "nodemailer": "^6.9.7",
     "payload": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
